objects/GU_Contract_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_List__c</fullName>
        <label>Extended List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Net_Price__c</fullName>
        <label>Extended Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GU_Contract_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>GU Contract Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GU_Contract_Status__c</fullName>
        <formula>TEXT(GU_Contract__r.GU_Contract_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GU Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_Contract_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GU Contract Type</label>
        <referenceTo>GU_Contract__c</referenceTo>
        <relationshipLabel>GU Contract Line Items (GU Contract Type)</relationshipLabel>
        <relationshipName>GU_Contract_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GU_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GU Contract</label>
        <referenceTo>GU_Contract__c</referenceTo>
        <relationshipLabel>GU Contract Line Items</relationshipLabel>
        <relationshipName>GU_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GU_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GU Product</label>
        <referenceTo>GU_Contract__c</referenceTo>
        <relationshipLabel>GU Contract Line Items (GU Product)</relationshipLabel>
        <relationshipName>GU_Contract_Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>GU Contract Line Items</relationshipLabel>
        <relationshipName>GU_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Discount__c</fullName>
        <label>Partner Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Book_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book Entry</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>GU Contract Line Items</relationshipLabel>
        <relationshipName>GU_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>BigMachines__Quote_Product__c</referenceTo>
        <relationshipLabel>GU Contract Line Items</relationshipLabel>
        <relationshipName>GU_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GU Contract Line Item</label>
    <nameField>
        <label>GU Contract Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GU Contract Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>